PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-Test-4_11-134_if_empty_condition_invalid/gcc-compile.txt
input.c:2:8: error: expected expression
    if(){
       ^
1 error generated.

return code: 1
